--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 before_install:
   - sudo apt-get update
   - sudo apt-get install r-base r-base-dev
+  - ls -l /usr/lib/R/lib
+  - ls -l /usr/lib64/R/lib
 rvm:
 #   - 1.9.2
   - 1.9.3
