--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: ruby
 before_install:
   - sudo apt-get update
-  - sudo apt-get install r-base r-base-dev
-  - ls -l /usr/lib/R/lib /usr/lib64/R/lib
+  - sudo apt-get install r-base-core 
+  # r-base-dev
+  - ls -l /usr/lib/R/lib
 rvm:
 #   - 1.9.2
   - 1.9.3
