--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ before_install:
   - sudo apt-get install r-base-core 
   # r-base-dev
   - ls -l /usr/lib/R/lib
+  - cat /etc/ld.so.conf
+  - cat /etc/ld.so.conf.d/*
 rvm:
 #   - 1.9.2
   - 1.9.3
